force-app/main/default/objects/Ativos_da_Ordem_de_Trabalho__c/Ativos_da_Ordem_de_Trabalho__c.object-meta.xml
<CustomObject>
    <label>Ativo da Ordem de Trabalho</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Número de Registro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ativos da Ordem de Trabalho</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>