force-app/main/default/objects/Ativos_da_Ordem_de_Trabalho__c/fields/Ativo_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Ativo_Relacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ativo Relacionado</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Ativos da Ordem de Trabalho</relationshipLabel>
    <relationshipName>Ativos_da_Ordem_de_Trabalho</relationshipName>
    <type>Lookup</type>
</CustomField>