force-app/main/default/objects/Ativos_da_Ordem_de_Trabalho__c/fields/Itens_que_Acompanham_o_Equipamento__c.field-meta.xml
<CustomField>
    <fullName>Itens_que_Acompanham_o_Equipamento__c</fullName>
    <label>Itens que Acompanham o Equipamento</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>