force-app/main/default/objects/Ativos_da_Ordem_de_Trabalho__c/fields/Observacoes_Tecnicas__c.field-meta.xml
<CustomField>
    <fullName>Observacoes_Tecnicas__c</fullName>
    <label>Observações Técnicas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>